--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,17 @@
 body {
-    background-image: url("../images/background.jpg");
+    background: url(../images/background.jpg) no-repeat center center fixed;
     background-size: cover;
 }
 
+h1 {
+    margin-top: 10%;
+    font-size: 100px; 
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
 #start {
-    margin-top: 25%;
+    margin-top: 5%;
 }
 
 p {
